feat: CampusBridge Spring Boot backend - complete implementation
- JWT authentication with Spring Security
- User registration, login and profile management
- Mentor connection system (send/accept/reject requests)
- Community forum with public and private posts
- Resource library with upload, download and save features
- Placement drives and interview stories module
- Real-time messaging with REST and WebSocket (STOMP)
- Notification system
- Admin dashboard with user verification and moderation
- Global exception handling and role-based access control
- MySQL database with JPA/Hibernate